--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -50,9 +50,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/postRV"
-        android:layout_width="match_parent"
-        android:layout_height="530dp"
+        android:layout_width="405dp"
+        android:layout_height="592dp"
         android:layout_marginTop="30dp"
+        android:layout_marginBottom="102dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,8 +62,11 @@
 
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="-25dp">
 
         <RelativeLayout
             android:id="@+id/bottom_bar"
@@ -70,9 +75,9 @@
             android:layout_gravity="bottom">
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottom_nav_bar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/bottom_nav_bar"
                 android:background="@drawable/bottom_nav"
                 app:menu="@menu/bottom_nav_menu">
 
